--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sdablanzaburgershop",
+  "name": "sdabburgershop",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -27,3 +27,5 @@
     "vite": "^7.2.4"
   }
 }
+
+
