--- a/sdablanzaburgershop/package.json
+++ b/sdablanzaburgershop/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://Davidavidave.github.io/sdabburgershop",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
