--- a/sdablanzaburgershop/package.json
+++ b/sdablanzaburgershop/package.json
@@ -9,7 +9,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "vite build && gh-pages -d dist -r https://github.com/Davidavidave/Davidavidave.github.io.git"
+    "predeploy": "npm run build",
+    "deploy": "node deploy.js"
   },
   "dependencies": {
     "react": "^19.2.0",
